--- a/data/sql/db-world/teleporter_npc.dist
+++ b/data/sql/db-world/teleporter_npc.dist
@@ -92,15 +92,15 @@ INSERT INTO conditions (SourceTypeOrReferenceId, SourceGroup, SourceEntry, Condi
 (15, @GOSSIP_MENU, 6, 6, 67, "Thunder bluff"),
 (15, @GOSSIP_MENU, 7, 6, 67, "Undercity"),
 (15, @GOSSIP_MENU, 8, 6, 67, "Silvermoon city"),
-(15, @GOSSIP_MENU+1, 0, 6, 469, "Gnomeregan"),
-(15, @GOSSIP_MENU+1, 1, 6, 469, "The Deadmines"),
-(15, @GOSSIP_MENU+1, 2, 6, 469, "The Stockade"),
-(15, @GOSSIP_MENU+1, 3, 6, 67, "Ragefire Chasm"),
-(15, @GOSSIP_MENU+1, 4, 6, 67, "Razorfen Downs"),
-(15, @GOSSIP_MENU+1, 5, 6, 67, "Razorfen Kraul"),
-(15, @GOSSIP_MENU+1, 6, 6, 67, "Scarlet Monastery"),
-(15, @GOSSIP_MENU+1, 7, 6, 67, "Shadowfang Keep"),
-(15, @GOSSIP_MENU+1, 8, 6, 67, "Wailing Caverns"),
+-- (15, @GOSSIP_MENU+1, 0, 6, 469, "Gnomeregan"),
+-- (15, @GOSSIP_MENU+1, 1, 6, 469, "The Deadmines"),
+-- (15, @GOSSIP_MENU+1, 2, 6, 469, "The Stockade"),
+-- (15, @GOSSIP_MENU+1, 3, 6, 67, "Ragefire Chasm"),
+-- (15, @GOSSIP_MENU+1, 4, 6, 67, "Razorfen Downs"),
+-- (15, @GOSSIP_MENU+1, 5, 6, 67, "Razorfen Kraul"),
+-- (15, @GOSSIP_MENU+1, 6, 6, 67, "Scarlet Monastery"),
+-- (15, @GOSSIP_MENU+1, 7, 6, 67, "Shadowfang Keep"),
+-- (15, @GOSSIP_MENU+1, 8, 6, 67, "Wailing Caverns"),
 (15, @GOSSIP_MENU+6, 9, 6, 67, "Thousand Needles"),
 (14, @GOSSIP_MENU, @TEXT_ID+1, 6, 469, "For the Alliance"),
 (14, @GOSSIP_MENU, @TEXT_ID, 6, 67, "For the Horde");
