A few more fixes where needed

--- a/data/sql/db-world/teleporter_npc.dist
+++ b/data/sql/db-world/teleporter_npc.dist
@@ -32,8 +32,8 @@ DELETE from gameobject WHERE ID = @RUNE AND guid >= 200000;
 
 -- Teleporter
 
-INSERT INTO creature_template (entry, modelid1, name, subname, IconName, gossip_menu_id, minlevel, maxlevel, faction, npcflag, speed_walk, speed_run, scale, rank, unit_class, unit_flags, type, type_flags, RegenHealth, flags_extra, AIName, ScriptName) VALUES
-(@ENTRY, @MODEL, @NAME, @SUBNAME, "Directions", @GOSSIP_MENU, 71, 71, 35, 3, 1, 1.14286, 1.25, 1, 1, 2, 7, 138936390, 1, 2, "SmartAI", "SmartAI");
+INSERT INTO creature_template (entry, modelid1, name, subname, IconName, gossip_menu_id, minlevel, maxlevel, faction, npcflag, speed_walk, speed_run, scale, unit_class, unit_flags, type, type_flags, RegenHealth, flags_extra, AIName, ScriptName) VALUES
+(@ENTRY, @MODEL, @NAME, @SUBNAME, "Directions", @GOSSIP_MENU, 71, 71, 35, 3, 1, 1.14286, 1.25, 1, 2, 7, 138936390, 1, 2, "SmartAI", "SmartAI");
 
 -- Teleporter aura
 
@@ -519,19 +519,19 @@ INSERT INTO smart_scripts (entryorguid, source_type, id, link, event_type, event
 -- Teleporter spawns:
 
 ALTER TABLE creature AUTO_INCREMENT = 200000;
-INSERT INTO creature (id, map, spawnMask, phaseMask, modelid, position_x, position_y, position_z, orientation, spawntimesecs, curhealth, curmana) VALUES
-(@ENTRY, 0, 1, 1, 0, -13180.5, 342.503, 43.1936, 4.32977, 25, 13700, 6540), 
-(@ENTRY, 530, 1, 1, 0, -3862.69, -11645.8, -137.629, 2.38273, 25, 13700, 6540), 
-(@ENTRY, 0, 1, 1, 0, -4898.37, -965.118, 501.447, 2.25986, 25, 13700, 6540), 
-(@ENTRY, 0, 1, 1, 0, -8845.09, 624.828, 94.2999, 0.44062, 25, 13700, 6540), 
-(@ENTRY, 1, 1, 1, 0, 1599.25, -4375.85, 10.0872, 5.23641, 25, 13700, 6540), 
-(@ENTRY, 1, 1, 1, 0, -1277.65, 72.9751, 128.742, 5.95567, 25, 13700, 6540), 
-(@ENTRY, 0, 1, 1, 0, 1637.21, 240.132, -43.1034, 3.13147, 25, 13700, 6540), 
-(@ENTRY, 530, 1, 1, 0, 9741.67, -7454.19, 13.5572, 3.14231, 25, 13700, 6540), 
-(@ENTRY, 571, 1, 1, 0, 5807.06, 506.244, 657.576, 5.54461, 25, 13700, 6540), 
-(@ENTRY, 1, 1, 1, 0, 9866.83, 2494.66, 1315.88, 5.9462, 25, 13700, 6540), 
-(@ENTRY, 0, 1, 1, 0, -14279.8, 555.014, 8.90011, 3.97606, 25, 13700, 6540), 
-(@ENTRY, 530, 1, 1, 0, -1888.65, 5355.88, -12.4279, 1.25883, 25, 13700, 6540);
+INSERT INTO creature (id1, map, spawnMask, phaseMask, position_x, position_y, position_z, orientation, spawntimesecs, curhealth, curmana) VALUES
+(@ENTRY, 0, 1, 0, -13180.5, 342.503, 43.1936, 4.32977, 25, 13700, 6540), 
+(@ENTRY, 530, 1, 0, -3862.69, -11645.8, -137.629, 2.38273, 25, 13700, 6540), 
+(@ENTRY, 0, 1, 0, -4898.37, -965.118, 501.447, 2.25986, 25, 13700, 6540), 
+(@ENTRY, 0, 1, 0, -8845.09, 624.828, 94.2999, 0.44062, 25, 13700, 6540), 
+(@ENTRY, 1, 1, 0, 1599.25, -4375.85, 10.0872, 5.23641, 25, 13700, 6540), 
+(@ENTRY, 1, 1, 0, -1277.65, 72.9751, 128.742, 5.95567, 25, 13700, 6540), 
+(@ENTRY, 0, 1, 0, 1637.21, 240.132, -43.1034, 3.13147, 25, 13700, 6540), 
+(@ENTRY, 530, 1, 0, 9741.67, -7454.19, 13.5572, 3.14231, 25, 13700, 6540), 
+(@ENTRY, 571, 1, 0, 5807.06, 506.244, 657.576, 5.54461, 25, 13700, 6540), 
+(@ENTRY, 1, 1, 0, 9866.83, 2494.66, 1315.88, 5.9462, 25, 13700, 6540), 
+(@ENTRY, 0, 1, 0, -14279.8, 555.014, 8.90011, 3.97606, 25, 13700, 6540), 
+(@ENTRY, 530, 1, 0, -1888.65, 5355.88, -12.4279, 1.25883, 25, 13700, 6540);
 
 -- Rune spawns:
 
